--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
-    "cors": "^2.8.5",
+    "compression": "^1.7.3",
     "express": "^4.16.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
