--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:dev": "webpack -d --watch",
     "build:start": "nodemon server/index.js",
-    "start": "node server/index.js"
+    "build": "webpack -d -p",
+    "start": "webpack -d -p && NODE_ENV=production node server/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,16 +20,16 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "webpack": "^4.29.0"
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.3",
+    "@babel/core": "^7.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
     "eslint": "^5.12.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
-    "nodemon": "^1.18.9",
-    "webpack-cli": "^3.2.1"
+    "nodemon": "^1.18.9"
   }
 }
